--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "php": ">=5.3.0",
-        "gglnx/nautik": "2.0.*@dev"
+        "php": ">=5.4.0",
+        "gglnx/nautik": "dev-master"
     }
 }
